# FunctionalScenes

./: .gitignore  .gitmodules  Dockerfile  Manifest.toml  Project.toml  README.md  Singularity  Singularity.alpine  Singularity.bazel  Vagrantfile  default.conf  init.sh  load_config.sh  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.sh  start_docker.sh
env.d/: Singularity  Singularity.base  Singularity.blender  Singularity.minimal  Singularity.rstudio  default.conf  install_pytorch3d.sh  load_config.sh  requirements.txt  run.sh  setup.sh  start_rstudio.sh
env.d/sconfig/: init.sh
env.d/sconfig/templates/: load_config.sh  setup.sh
functional_scenes/: __init__.py  alexnet.py  ffmpeg.py  nn_features.py
functional_scenes/OGdatadriven/: solver.py  zlayer_test.py
functional_scenes/og_proposal/: __init__.py  dataset.py  interface.py  model.py  pytypes.py  solver.py  tasks.py  vae.py  zlayer.py
functional_scenes/render/: __init__.py  interface.py  render.py  simple.py  utils.py
scripts/: batch_inference.py  batch_render.py  generate_condlist.py  generate_ddp_rooms.jl  generate_occupancy_grid_room.jl  generate_rooms.jl  render_ddp_rooms.jl  render_occupancy_grid_room.jl  render_rooms.jl  render_test.py  test_pytorch3d.py
scripts/OGdatadriven/: dataset.py  main.py  solver.py  utils.py
scripts/analysis/: 1_pilot.Rmd  1exit.Rmd  2e_1p_30s.Rmd  2e_1p_30s_matchedc3.Rmd  ccn_2023_change_detection.Rmd  covariates.jl  features.py  parse_exp.py  pilot.Rmd  scene_path_analysis.jl  scene_path_viz.py  vss_pilot.Rmd
scripts/analysis/vss_poster/: vss_poster.Rmd
scripts/experiments/attention/: attention.jl  attention.json  gm.json  run.jl
scripts/experiments/fixed_granularity/: attention.json  batch.py  process_chains.jl  reconstruction_analysis.py  run.jl  run.sh
scripts/experiments/no_attention/: .visualize.py.swp  attention.json  process_chains.jl  run.jl  (+2 more)
scripts/nn/: generate_ddp_train_trials.jl  generate_trials.jl  render_ddp_rooms.jl  test.py  test_ddp.sh  test_vae.sh  train_ddp.sh  train_og_ddp.py  train_og_ddp.sh  train_vae.sh  write_ffcv_dataset.py
scripts/stimuli/: analyze_path_metrics.jl  batch_render.py  create_mask.py  generate_condlist.py  generate_rooms.jl  render_rooms.jl
scripts/utils/: compile_deps.jl  cuda_check.c  render_test.py  test_pytorch3d.py
src/: FunctionalScenes.jl  astar_0812.jl  astar_withtests.jl  dists.jl  furniture.jl  gen.jl  paths.jl  room.jl  utils.jl
src/blender/: blender.jl  render.py  template.blend  template.blend1
src/dgp/: dgp.jl  gen.jl
src/gm/: dgp.jl  gm.jl  helpers.jl  model.jl  quad_tree_model.jl  quad_tree_model_gen.jl  quad_tree_prior.jl  quad_tree_prior_gen.jl  recurse_model.jl  recurse_model_gen.jl  viz_utils.jl
src/inference/: experiments.jl  inference.jl
src/rooms/: furniture.jl  moves.jl  multires_path.jl  objects.jl  paths.jl  room.jl  rooms.jl  tiles.jl  viz.jl
templates/: default.conf  run.sh
test/: Manifest.toml  Project.toml  gm.jl  involution.jl  path_comparison.jl  path_dgp.jl  path_test.jl  qt_gm.jl  qt_inv.jl  qt_prior.jl  recurse_gm.jl  runtests.jl
test/ddp/: interface.py  qt_ddp.jl  qt_from_ddp.jl
test/dgp/: dgp.jl
test/graphics/: hello_world_mitsuba3.py  mitsuba_volume.py  scene_template.py
test/paths/: multires_regenerate.jl  path_comparison.jl  path_test.jl  plottest.jl
test/qt_gm/: pathing.jl  qt_gm.jl  qt_graphics.jl  qt_inv.jl
test/room/: show.jl
(+38 files in other folders)
