[tool.poetry]
name = "functional_scenes"
version = "0.1.0"
description = ""
authors = ["belledon <mbelledonne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"
SQLAlchemy = "^1.3.22"
POT = "^0.7.0"
torch-intermediate-layer-getter = "^0.1.post1"
matplotlib = "^3.3.3"
ninja = "^1.10.0"
slurm = {path = "deps/slurmpy"}
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
